--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "@nuxtjs/pwa": "^3.3.5",
         "core-js": "^3.15.1",
         "nuxt": "^2.15.7",
-        "vue-slick-carousel": "^1.0.6"
+        "vue-slick-carousel": "^1.0.6",
+        "vuelidate": "^0.7.6"
     },
     "devDependencies": {
         "fibers": "^5.0.0",
