--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@nuxtjs/pwa": "^3.3.5",
         "core-js": "^3.15.1",
         "nuxt": "^2.15.7",
+        "nuxt-i18n": "^6.28.1",
         "vue-slick-carousel": "^1.0.6"
     },
     "devDependencies": {
