--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
         "generate": "nuxt generate"
     },
     "dependencies": {
+        "@nuxtjs/auth-next": "5.0.0-1637329424.7004f24",
         "@nuxtjs/axios": "^5.13.6",
+        "@nuxtjs/i18n": "^7.2.0",
         "@nuxtjs/pwa": "^3.3.5",
         "core-js": "^3.15.1",
         "nuxt": "^2.15.7",
-        "nuxt-i18n": "^6.28.1",
         "vue-slick-carousel": "^1.0.6",
         "vuelidate": "^0.7.6"
     },
